--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,7 @@ out/
 .idea/libraries/mysql_connector_java_8_0_20.xml
 
 .idea/sqldialects.xml
+
+.idea/codeStyles/Project.xml
+
+.idea/libraries/JDBC.xml
